--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Poemas</title>
     <style>
         body {
-            background-color: #1E90FF;
+            background-color: #00CED1;
             font-family: 'Courier New', Courier, monospace;
             display: flex;
             flex-direction: column;
